devops/kubernetes/spotlight-api.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spotlight
    component: api
  name: spotlight-api
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  type: NodePort
  selector:
    app: spotlight
    component: api
