devops/kubernetes/spotlight-ui.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spotlight
    component: ui
  name: spotlight-ui
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  type: NodePort
  selector:
    app: spotlight
    component: ui
